# ppnm

./: Makefile  a.out  hello.c
Exam/: F_ijVals.txt  Makefile  bilinear.c  bilinear.h  binsearch.h  data2plot.txt  dataVals.txt  input2Array.c  input2Array.h  main  main.c  main.c.save  output.txt  plot.img.gpi  readme.txt  x_i_y_i.txt
Exercises/exercise10/: Makefile  fig-gpl.gpi  fig-gpl.tex  main.c  ms.aux  ms.tex
Exercises/exercise2/: Makefile
Exercises/exercise3/: math  out.txt
Exercises/exercise4/: main
Exercises/exercise5/: Makefile  cmdline  out.cmdline.txt
Exercises/exercise6/: .Makefile.swo  .Makefile.swp  gamma.c
Exercises/exercise7/: Makefile  exA  exA.c  out.exA.txt
Exercises/exercise8/: Makefile  main  main.c
Homework/Eigenvalues/: CMakeLists.txt  Makefile  box.txt  diffClock.c  extraFuncs.c  extraFuncs.h  extrafuncs.c  gsl_timing.txt  jacobi.c  jacobi.h  main  main.c  makefile  output.txt  part_C.gpi  part_C_gsl.gpi  part_C_myMethod.gpi  plot.gpi  runtime.c  test_runtime.c  timer.c  timer.h  timing.txt  utilities.c  utilities.h
Homework/LeastSquares/: CMakeLists.txt  Makefile  backsub.c  backsub.h  extrafuncs.c  extrafuncs.h  fit.gpi  gramSchmidt.c  gramSchmidt.h  input2Array.c  input2Array.h  leastSquares.c  leastSquares.h  main  main.c  makefile  output.txt  utilities.c
Homework/Minimum/: CMakeLists.txt  Makefile  main  main.c  makefile  minimization.c  minimization.h  output.txt
Homework/NummericalIntegration/: CMakeLists.txt  main  main.c  output.txt
Homework/Roots/: CMakeLists.txt  Makefile  RK-ODE.c  RK-ODE.h  backsub.h  convergence.txt  convergence_plot.gpi  gramSchmidt.c  gramSchmidt.h  hydrogen.txt  hydrogen_plot.gpi  main  main.c  makefile  rootfinding.c  rootfinding.h
exam2/: Makefile  bilinear.c  bilinear.h  binsearch.c  binsearch.c.save  dataPts.txt  main  main.c  output.txt  plot.img.gpi  readme.txt
exercise2/: hello
exercise3/: Makefile  math.c
exercise4/: Makefile  main.c  out.txt
exercise5/: cmdline.c
exercise6/: Makefile  main.c
(+98 files in other folders)
